--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mysql2": "^2.2.5",
     "pm2": "^5.1.0",
     "sequelize": "^6.6.5",
+    "supertest": "^6.1.3",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.1.6",
     "ts-jest": "^27.0.3",
